--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">week5task_linearlayout</string>
+    <string name="user_name">Ahmed hassan</string>
+    <string name="role">Engineer</string>
+    <string name="country_name">UK</string>
+    <string name="reviews_counter">(150 Reviews)</string>
+    <string name="rating_ratio">4.5</string>
+    <string name="hours_counter">3 hr</string>
+    <string name="native_country">Russian</string>
+    <string name="days_ago_counter">5 days ago</string>
 </resources>
